# EnergyVerse

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  PHASE_TRACKER.md  PROJECT_CONTEXT.md  README.md  TESTING.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/admin/: dependencies.py  service.py
apps/api/app/api/: health.py
apps/api/app/areas/: service.py
apps/api/app/assets/: constants.py  service.py
apps/api/app/audit/: __init__.py  query_service.py  service.py  types.py
apps/api/app/auth/: __init__.py  admin.py  claims.py  dependencies.py  links.py  provisioning.py  registration.py  verifier.py
apps/api/app/company/: __init__.py  constants.py  service.py
apps/api/app/core/: errors.py  firebase.py  request_id.py  settings.py
apps/api/app/db/: firestore.py
apps/api/app/facilities/: service.py
apps/api/app/models/: __init__.py  api.py  base.py  entities.py
apps/api/app/rbac/: __init__.py  seeding.py  (+3 more)
apps/api/scripts/: export_openapi.py  reconcile_roles.py  seed.py
apps/api/tests/: test_areas.py  test_assets.py  test_audit.py  test_auth.py  test_auth_integration.py  test_auth_links.py  test_auth_seed.py  test_company.py  test_cors.py  test_dashboard.py  test_data_foundation_integration.py  test_error_envelope.py  test_facilities.py  test_firestore.py  test_firestore_integration.py  test_health.py  test_openapi.py  test_platform.py  test_rbac_enforcement.py  test_registration.py  test_registration_integration.py  test_repositories.py  test_roles.py  test_root.py  test_seed_and_rbac.py  test_users.py
(+179 files in other folders)
